--- a/style.css
+++ b/style.css
@@ -30,15 +30,22 @@ table tr td{
 }
 
 .setwidth{
-    width:30px;
+    width:50px;
+    height: 50px;
 }
 .ht {
-    width:30px;
-    height: 55px;
+    width:50px;
+    height: 110px;
 }
 
 .setwidth2 {
-    width: 80px;
+    width: 120px;
+    height: 50px;
+}
+.text {
+    width: 100%;
+    height: 50px;
+    font-size: larger;
 }
 
 
